--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -9,7 +9,8 @@
 .cor1{ color: #99a9bf; }
 .cor2{ color: #8492a6; }
 .cor3{ color: #475669; }
-.cor4{color: #FF5400;} /*orange*/
+.cor4{ color: #FF5400; } /*orange*/
+.cor5{ color: #f56c6c;}
 .corF{color: #fff;} 
 .corB{color: #000000}
 
